--- a/hard.html
+++ b/hard.html
@@ -3,20 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <title>League of Legends memory game?</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        Info pattern League card matching game + short description
-        navigation bar to "home", easy (champions), medium(little legends) and hard(items). as you play there will be a limit set on the total amount of clicks that goes down the more you complete them. 
-    </header>
-
     <section class="container-fluid league-memorygame">
         Example and explanation of how the game works
         tryout of a 3/4 map of cards
@@ -81,10 +70,19 @@
         </div>
     </section>
 
-    <footer>
-        Contact me!
-        League of legends info
-    </footer>
-    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
+
+.backside {
+    position: absolute;
+}
+
+.frontside,
+.backside {
+    background: white;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+}
