Made the javascript for the memory game on index.html, fixed bug clicking multiple pairs before loading, fixed bug doubleclicking cards

--- a/index.html
+++ b/index.html
@@ -21,60 +21,60 @@
         Example and explanation of how the game works
         tryout of a 3/4 map of cards
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="ahri">
             <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="akali">
             <img class="frontside" src="assets/images/akali.jpg" alt="akali">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="brand">
             <img class="frontside" src="assets/images/brand.jpg" alt="brand">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
         </div>
 
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="garen">
             <img class="frontside" src="assets/images/garen.jpg" alt="garen">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="katarina">
             <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="pyke">
             <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
         </div>
 
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="pyke">
             <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="katarina">
             <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="garen">
             <img class="frontside" src="assets/images/garen.jpg" alt="garen">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
         </div>
 
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="brand">
             <img class="frontside" src="assets/images/brand.jpg" alt="brand">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="ahri">
             <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card">
+            <div class="col-lg-2 card" data-image="akali">
             <img class="frontside" src="assets/images/akali.jpg" alt="akali">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
