added footer and nav color and centered them, organized css file

--- a/index.html
+++ b/index.html
@@ -13,75 +13,82 @@
 </head>
 <body>
     <header>
-        Info pattern League card matching game + short description
-        navigation bar to "home", easy (champions), medium(little legends) and hard(items). as you play there will be a limit set on the total amount of clicks that goes down the more you complete them. 
+        <div class="header">
+            <div class="titleText">
+                Info pattern League card matching game
+            </div>
+
+            <div class="nav-bar">
+                navigation bar to "home", easy (champions), medium(little legends) and hard(items). as you play there will be a limit set on the total amount of clicks that goes down the more you complete them. 
+            </div>
+        </div>
     </header>
 
     <section class="container-fluid league-memorygame">
         Example and explanation of how the game works
         tryout of a 3/4 map of cards
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card" data-image="ahri">
+            <div class="col-lg-1 card" data-image="ahri">
             <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="akali">
+            <div class="col-lg-1 card" data-image="akali">
             <img class="frontside" src="assets/images/akali.jpg" alt="akali">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="brand">
+            <div class="col-lg-1 card" data-image="brand">
             <img class="frontside" src="assets/images/brand.jpg" alt="brand">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
         </div>
 
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card" data-image="garen">
+            <div class="col-lg-1 card" data-image="garen">
             <img class="frontside" src="assets/images/garen.jpg" alt="garen">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="katarina">
+            <div class="col-lg-1 card" data-image="katarina">
             <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="pyke">
+            <div class="col-lg-1 card" data-image="pyke">
             <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
         </div>
 
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card" data-image="pyke">
+            <div class="col-lg-1 card" data-image="pyke">
             <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="katarina">
+            <div class="col-lg-1 card" data-image="katarina">
             <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="garen">
+            <div class="col-lg-1 card" data-image="garen">
             <img class="frontside" src="assets/images/garen.jpg" alt="garen">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
         </div>
 
         <div class="row justify-content-md-center">
-            <div class="col-lg-2 card" data-image="brand">
+            <div class="col-lg-1 card" data-image="brand">
             <img class="frontside" src="assets/images/brand.jpg" alt="brand">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="ahri">
+            <div class="col-lg-1 card" data-image="ahri">
             <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
-            <div class="col-lg-2 card" data-image="akali">
+            <div class="col-lg-1 card" data-image="akali">
             <img class="frontside" src="assets/images/akali.jpg" alt="akali">
             <img class="backside" src="assets/images/icon.jpg" alt="icon">
             </div>
         </div>
     </section>
 
-    <footer>
+    <footer class="footer">
         Contact me!
         League of legends info
     </footer>
