Navigation bar added and colored, text updated

--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
     <header>
         <div class="header">
             <div class="titleText">
-                Info pattern League card matching game
+                <h1>League of Legends memory game</h1>
             </div>
 
             <div class="nav-bar">
-                navigation bar to "home", easy (champions), medium(little legends) and hard(items). as you play there will be a limit set on the total amount of clicks that goes down the more you complete them. 
+                <ul>
+                    <li class="nav-item"><a href="index.html" class="home"><div>Home</div></a></li>
+                    <li class="nav-item"><a href="easy.html" class="easy"><div>Easy</div></a></li>
+                    <li class="nav-item"><a href="medium.html" class="medium"><div>Medium</div></a></li>
+                    <li class="nav-item hard"><a href="hard.html" class="hard"><div>Hard</div></a></li>
+                </ul>
             </div>
         </div>
     </header>
 
     <section class="container-fluid league-memorygame">
-        Example and explanation of how the game works
-        tryout of a 3/4 map of cards
+        <div>This is a game to test and train your memory! Pick the difficulty that you would like to play at in the navigation menu above and play!</div>
+        <div>The goal is to match the League of Legends champions. Try and see how it works below!</div>
         <div class="row justify-content-md-center">
             <div class="col-lg-1 card" data-image="ahri">
             <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
