footer links added, working on reset button

--- a/index.html
+++ b/index.html
@@ -29,73 +29,80 @@
         </div>
     </header>
 
-    <section class="container-fluid league-memorygame">
-        <div>This is a game to test and train your memory! Pick the difficulty that you would like to play at in the navigation menu above and play!</div>
-        <div>The goal is to match the League of Legends champions. Try and see how it works below!</div>
-        <div class="row justify-content-md-center">
-            <div class="col-lg-1 card" data-image="ahri">
-            <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
-            <div class="col-lg-1 card" data-image="akali">
-            <img class="frontside" src="assets/images/akali.jpg" alt="akali">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
-            <div class="col-lg-1 card" data-image="brand">
-            <img class="frontside" src="assets/images/brand.jpg" alt="brand">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
+    <section class="container-fluid league-memorygame main-page">
+        <div class="information">
+            <div>This is a game to test and train your memory! Pick the difficulty that you would like to play at in the navigation menu above and play!</div>
+            <div>The goal is to match the League of Legends champions. Try and see how it works below!</div>
         </div>
+        <div class="index-board">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-1 card" data-image="ahri">
+                <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="akali">
+                <img class="frontside" src="assets/images/akali.jpg" alt="akali">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="brand">
+                <img class="frontside" src="assets/images/brand.jpg" alt="brand">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+            </div>
 
-        <div class="row justify-content-md-center">
-            <div class="col-lg-1 card" data-image="garen">
-            <img class="frontside" src="assets/images/garen.jpg" alt="garen">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-1 card" data-image="garen">
+                <img class="frontside" src="assets/images/garen.jpg" alt="garen">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="katarina">
+                <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="pyke">
+                <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
             </div>
-            <div class="col-lg-1 card" data-image="katarina">
-            <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
-            <div class="col-lg-1 card" data-image="pyke">
-            <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
-        </div>
 
-        <div class="row justify-content-md-center">
-            <div class="col-lg-1 card" data-image="pyke">
-            <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-1 card" data-image="pyke">
+                <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="katarina">
+                <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="garen">
+                <img class="frontside" src="assets/images/garen.jpg" alt="garen">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
             </div>
-            <div class="col-lg-1 card" data-image="katarina">
-            <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
-            <div class="col-lg-1 card" data-image="garen">
-            <img class="frontside" src="assets/images/garen.jpg" alt="garen">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
-        </div>
 
-        <div class="row justify-content-md-center">
-            <div class="col-lg-1 card" data-image="brand">
-            <img class="frontside" src="assets/images/brand.jpg" alt="brand">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-1 card" data-image="brand">
+                <img class="frontside" src="assets/images/brand.jpg" alt="brand">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="ahri">
+                <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card" data-image="akali">
+                <img class="frontside" src="assets/images/akali.jpg" alt="akali">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
             </div>
-            <div class="col-lg-1 card" data-image="ahri">
-            <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
-            <div class="col-lg-1 card" data-image="akali">
-            <img class="frontside" src="assets/images/akali.jpg" alt="akali">
-            <img class="backside" src="assets/images/icon.jpg" alt="icon">
-            </div>
+
+            <button class="resetbutton">Reset</button>
         </div>
     </section>
 
-    <footer class="footer">
-        Contact me!
-        League of legends info
+    <footer class="footer row justify-content-center">
+        <a href="" class="col-2">Contact me!</a>
+        <a href="https://na.leagueoflegends.com/en-us/how-to-play/" target="_blank" class="col-2">League of legends info</a>
+        <a href="https://na.leagueoflegends.com/en-us/champions/" target="_blank" class="col-2">All League of Legends champions!</a>
     </footer>
     <script src="assets/js/scripts.js"></script>
 </body>
