fisher yates shuffle added, trying to make the map be randomized completely rather than just the rows

--- a/easy.html
+++ b/easy.html
@@ -9,3 +9,14 @@
     
 </body>
 </html>
+<!-- 
+    
+    (function shuffleCards() {
+    cards.forEach(card => {
+        let randomPos = Math.floor(Math.random() * 50);
+        card.style.order = randomPos;
+    });
+})();
+
+
+-->
