--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
             </div>
 
             <button class="resetbutton">Reset</button>
+
+            <div>Tries: <a id="tries">0</a></div>
+
+            <div id="myBtn"></div>
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <p>Some text in the Modal..</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
