images now shuffle, bug: cards dont match correctly needs to be fixed!

--- a/index.html
+++ b/index.html
@@ -36,61 +36,61 @@
         </div>
         <div class="index-board">
             <div class="row justify-content-md-center">
-                <div class="col-lg-1 card" data-image="ahri">
-                <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/ahri.jpg" data-image="ahri" alt="ahri">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
-                <div class="col-lg-1 card" data-image="akali">
-                <img class="frontside" src="assets/images/akali.jpg" alt="akali">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/akali.jpg" alt="akali" data-image="akali">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
-                <div class="col-lg-1 card" data-image="brand">
-                <img class="frontside" src="assets/images/brand.jpg" alt="brand">
-                <img class="backside" src="assets/images/icon.jpg" alt="icon">
-                </div>
-            </div>
-
-            <div class="row justify-content-md-center">
-                <div class="col-lg-1 card" data-image="garen">
-                <img class="frontside" src="assets/images/garen.jpg" alt="garen">
-                <img class="backside" src="assets/images/icon.jpg" alt="icon">
-                </div>
-                <div class="col-lg-1 card" data-image="katarina">
-                <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
-                <img class="backside" src="assets/images/icon.jpg" alt="icon">
-                </div>
-                <div class="col-lg-1 card" data-image="pyke">
-                <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/brand.jpg" alt="brand" data-image="brand">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
             </div>
 
             <div class="row justify-content-md-center">
-                <div class="col-lg-1 card" data-image="pyke">
-                <img class="frontside" src="assets/images/pyke.jpg" alt="pyke">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
-                <div class="col-lg-1 card" data-image="katarina">
-                <img class="frontside" src="assets/images/katarina.jpg" alt="katarina">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/katarina.jpg" alt="katarina" data-image="katarina">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
-                <div class="col-lg-1 card" data-image="garen">
-                <img class="frontside" src="assets/images/garen.jpg" alt="garen">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/pyke.jpg" alt="pyke" data-image="pyke">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
             </div>
 
             <div class="row justify-content-md-center">
-                <div class="col-lg-1 card" data-image="brand">
-                <img class="frontside" src="assets/images/brand.jpg" alt="brand">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/pyke.jpg" alt="pyke" data-image="pyke">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
-                <div class="col-lg-1 card" data-image="ahri">
-                <img class="frontside" src="assets/images/ahri.jpg" alt="ahri">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/katarina.jpg" alt="katarina" data-image="katarina">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
-                <div class="col-lg-1 card" data-image="akali">
-                <img class="frontside" src="assets/images/akali.jpg" alt="akali">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+            </div>
+
+            <div class="row justify-content-md-center">
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/brand.jpg" alt="brand" data-image="brand">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/ahri.jpg" alt="ahri" data-image="ahri">
+                <img class="backside" src="assets/images/icon.jpg" alt="icon">
+                </div>
+                <div class="col-lg-1 card">
+                <img class="frontside" src="assets/images/akali.jpg" alt="akali" data-image="akali">
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
             </div>
