modal adjusted and fixed, needs to be styled

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     </header>
 
     <section class="container-fluid league-memorygame main-page">
+    <div class="row">
+        <div class="col-1 sidebar"></div>
+    </div>
         <div class="information">
             <div>This is a game to test and train your memory! Pick the difficulty that you would like to play at in the navigation menu above and play!</div>
             <div>The goal is to match the League of Legends champions. Try and see how it works below!</div>
@@ -94,6 +97,7 @@
                 <img class="backside" src="assets/images/icon.jpg" alt="icon">
                 </div>
             </div>
+            <div class="col-1 sidebar"></div>
 
             <button class="resetbutton">Reset</button>
 
@@ -102,8 +106,7 @@
             <div id="myBtn"></div>
             <div id="myModal" class="modal">
                 <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <p>Some text in the Modal..</p>
+                    <p>Congratulations! You have beaten this level in <span id="victry"></span> times!</p>
                 </div>
             </div>
 
